# machine-learning-projects

./: .gitignore
computer_vision/: pyproject.toml
computer_vision/src/: base.py  classifier.py  cnn.md  cnn.py  dataset.py  lstm.md  lstm.py  reference.md
supervised_learning/: pyproject.toml  requirements.sh
supervised_learning/src/: Compare_MLModels.ipynb  Compare_MLModels.md  Compare_MLModels.py  PCA_feature_selection.ipynb  PCA_feature_selection.py  kmeans.ipynb  kmeans.py
